--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -15,4 +15,4 @@ jobs:
 
     - name: Run a one-line script
       run: |
-        echo ${{ toJSON(github.event) }}
+        echo "${{ toJSON(github.event) }}"
