--- a/.github/workflows/issue.yaml
+++ b/.github/workflows/issue.yaml
@@ -13,4 +13,4 @@ jobs:
 
     - name: Run a one-line script
       run: |
-        echo "${{ toJSON(github.event) }}"
+        echo "${{ toJSON(github) }}"
