--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -39,3 +39,12 @@ jobs:
         env:
           MATRIX_CONTEXT: ${{ toJson(matrix) }}
         run: echo "$MATRIX_CONTEXT"
+      - name: GH_TEST
+        if: startsWith(github.event.ref, 'refs/tags/')
+        run: |
+          echo "$GITHUB_REF#refs/tags/"
+          env | sort | grep GIT
+
+
+# GITHUB_REF=refs/heads/master
+# GITHUB_REF=refs/tags/v0.1.5
