--- a/.github/workflows/tag.yaml
+++ b/.github/workflows/tag.yaml
@@ -42,6 +42,6 @@ jobs:
         if: startsWith(github.event.ref, 'refs/tags/')
         run: |
           prefix="refs/tags/"
-          tag="$GITHUB_REF#$prefix"
+          tag=${GITHUB_REF#$prefix}
           echo $tag
           env | sort | grep GIT
