--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -45,6 +45,11 @@ jobs:
           echo "$GITHUB_REF#refs/tags/"
           env | sort | grep GIT
 
+      - name: GH_TEST
+        if: startsWith(github.event.ref, 'refs/tags/')
+        run: |
+          reponame=${GITHUB_REPOSITORY#$GITHUB_REPOSITORY_OWNER}
+          echo $reponame
 
 # GITHUB_REF=refs/heads/master
 # GITHUB_REF=refs/tags/v0.1.5
