--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -46,7 +46,7 @@ jobs:
           env | sort | grep GIT
 
       - name: GH_TEST
-        if: startsWith(github.event.ref, 'refs/tags/')
+        # if: startsWith(github.event.ref, 'refs/tags/')
         run: |
           reponame=${GITHUB_REPOSITORY#$GITHUB_REPOSITORY_OWNER}
           echo $reponame
