--- a/.github/workflows/issue_comment.yaml
+++ b/.github/workflows/issue_comment.yaml
@@ -32,4 +32,5 @@ jobs:
         run: echo "$RUNNER_CONTEXT"
       - name: Install release automaton
         run: |
-          go get github.com/appscodelabs/release-automaton@x7
+          echo $GOBIN
+          GOBIN=/usr/local/bin go get github.com/appscodelabs/release-automaton@x7
