--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -35,7 +35,7 @@ jobs:
       - name: Install release automaton
         run: |
           echo $GOBIN
-          GOBIN=/usr/local/bin go get github.com/appscodelabs/release-automaton@x7
+          GO111MODULE=on GOBIN=/usr/local/bin go get github.com/appscodelabs/release-automaton@x7
       - name: GH_TEST
         # if: startsWith(github.event.ref, 'refs/tags/')
         run: |
