--- a/.github/workflows/issue_comment.yaml
+++ b/.github/workflows/issue_comment.yaml
@@ -28,8 +28,7 @@ jobs:
 
       - name: Install release automaton
         run: |
-          echo $GOBIN
-          GOBIN=/usr/local/bin go get github.com/appscodelabs/release-automaton@x7
+          GO111MODULE=on GOBIN=/usr/local/bin go get github.com/appscodelabs/release-automaton@x7
 
       - name: Release
         run: |
