--- a/.github/workflows/issue_comment.yaml
+++ b/.github/workflows/issue_comment.yaml
@@ -31,6 +31,7 @@ jobs:
           sudo GO111MODULE=on GOBIN=/usr/local/bin go get github.com/appscodelabs/release-automaton@x7
 
       - name: Release
+        if: ${{ github.event.issue.milestone.title }} != ""
         run: |
           release-automaton \
             --release-tracker=${{ github.event.issue.html_url }} \
