--- a/.github/workflows/issue_comment.yaml
+++ b/.github/workflows/issue_comment.yaml
@@ -6,7 +6,11 @@ on:
 
 jobs:
   build:
+    name: Build
     runs-on: ubuntu-latest
+    defaults:
+      run:
+        shell: bash
 
     steps:
       - uses: actions/checkout@v1
@@ -44,21 +48,8 @@ jobs:
           git config --global user.name "1gtm"
           git config --global user.email "1gtm@appscode.com"
           git remote set-url origin https://${GITHUB_USER}:${GITHUB_TOKEN}@github.com/${GITHUB_REPOSITORY}.git
-          pr_url="${{ github.event.issue.pull_request.html_url }}"
-          echo $pr_url
-          proto="$(echo $pr_url | grep :// | sed -e's,^\(.*://\).*,\1,g')"
-          url="$(echo ${pr_url/$proto/})"
-          IFS='/'                 # / is set as delimiter
-          read -ra PATH <<<"$url" # str is read into an array as tokens separated by IFS
-          if [ ${PATH[0]} != 'github.com' ] || [ ${#PATH[@]} -ne 5 ]; then
-            echo "failed to parse relase-tracker: $url"
-            exit 1
-          fi
-          echo "REPOSITORY_OWNER" ${PATH[1]}
-          echo "REPOSITORY_NAME" ${PATH[2]}
-          echo "PR_NUMBER" ${PATH[4]}
           git fetch origin
-          hub pr checkout ${PATH[4]}
+          hub pr checkout ${{ github.event.issue.number }}
 
       - name: Release
         if: github.event.issue.milestone != null
