--- a/.github/workflows/issue_comment.yaml
+++ b/.github/workflows/issue_comment.yaml
@@ -57,7 +57,7 @@ jobs:
           GITHUB_USER: 1gtm
           GITHUB_TOKEN: ${{ secrets.LGTM_GITHUB_TOKEN }}
         run: |
-          release-automaton \
+          sudo release-automaton \
             --release-tracker=${{ github.event.issue.html_url }} \
             --comment-id=${{ github.event.comment.id }} \
             --release=${{ github.event.issue.milestone.title }} \
