--- a/.github/workflows/issue_comment.yaml
+++ b/.github/workflows/issue_comment.yaml
@@ -36,9 +36,7 @@ jobs:
           git clone --branch=x7 https://github.com/appscodelabs/release-automaton.git
           cd release-automaton
           go install ./...
-          # sudo GO111MODULE=on GOBIN=/usr/local/bin go get github.com/appscodelabs/release-automaton@8faf798e416e9f3529df80b93d0e686dd4cb9575
-          # sudo rm -rf /home/runner/go/pkg
-          # sudo chown -R $(id -u):$(id -g) /home/runner/go
+          sudo mv /home/runner/go/bin/release-automaton /usr/local/bin/release-automaton
 
       - name: Install GitHub CLI
         run: |
