--- a/.github/workflows/issue_comment.yaml
+++ b/.github/workflows/issue_comment.yaml
@@ -15,15 +15,15 @@ jobs:
     steps:
       - uses: actions/checkout@v1
 
+      - name: Env
+        run: |
+          env | sort | grep GIT
+
       - name: Set up Go 1.14
         uses: actions/setup-go@v1
         with:
           go-version: 1.14
         id: go
-
-      - name: Env
-        run: |
-          env | sort | grep GIT
 
       - name: Dump GitHub context
         env:
@@ -59,7 +59,7 @@ jobs:
         if: github.event.issue.milestone != null
         env:
           GITHUB_USER: 1gtm
-          GITHUB_TOKEN: ${{ secrets.LGTM_GITHUB_TOKEN }}
+          LGTM_GITHUB_TOKEN: ${{ secrets.LGTM_GITHUB_TOKEN }}
         run: |
           release-automaton \
             --release-tracker=${{ github.event.issue.html_url }} \
